--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -1,8 +1,3 @@
-
-#app {
-  padding: 2rem;
-}
-
 a {
   text-decoration: none;
 }
@@ -12,6 +7,7 @@ a {
 .logo.img {
   position: absolute;
   top: 1.6rem;
+  left: 2rem;
   height: 6em;
   padding: 1.5em;
 }
@@ -19,8 +15,8 @@ a {
 .logo.text {
 
   position: relative;
-  left: 4rem;
-  top: 1.3rem;
+  left: 5rem;
+  top: 3.3rem;
 
   color: #eaeaea;
   font-family: Inter;
@@ -29,4 +25,56 @@ a {
   padding: 1.5em;
 
   font-size: 3em;
+}
+
+h1 {
+  position: absolute;
+  left: 0rem;
+  top: -3rem;
+
+  color: #eaeaea;
+  font-family: Inter;
+  font-weight: 600;
+
+  padding: 1.5em;
+
+  font-size: 3em;
+}
+
+
+.content-container {
+
+  position: absolute;
+  top: 11rem;
+  right: 4rem;
+  left: 43rem;
+  bottom: 4rem;
+
+  min-height: 20rem;
+  min-width: 50rem;
+
+  background-color: #1a1a1a;
+  color: #eaeaea;
+
+  border: #3a3a3a solid;
+  border-width: .1em;
+  border-radius: .5rem;
+}
+
+.container {
+  position: absolute;
+  top: 11rem;
+  right: 4rem;
+  left: 4rem;
+  bottom: 4rem;
+
+  padding: 3rem;
+
+  background-color: #101010;
+  color: #eaeaea;
+
+  border: #3a3a3a solid;
+  border-width: .1em;
+  border-radius: .5rem;
+
 }
