Mods listing, new home page and fixes on the backend side

--- a/frontend/src/components/Buttons/button.module.css
+++ b/frontend/src/components/Buttons/button.module.css
@@ -4,9 +4,9 @@
     font-family: inherit;
     font-weight: 500;
 
-    padding: 10px 15px;
+    padding: .4em .7em;
 
-    border: .1em;
+    border: .1rem;
     border-style: solid;
     border-radius: .3em;
 
