Mod, createMod and About pages, input fields, some more content and a LOT of fixes (including backend)

--- a/frontend/src/components/Buttons/button.module.css
+++ b/frontend/src/components/Buttons/button.module.css
@@ -13,6 +13,10 @@
     transition: 300ms;
 }
 
+.button:hover {
+    cursor: pointer;
+}
+
 .primary {
     background-color: #353be5;
     border-color: #4e53dc;
