Mod creation page fields

--- a/frontend/src/components/Cards/row.module.css
+++ b/frontend/src/components/Cards/row.module.css
@@ -74,6 +74,7 @@
 }
 
 .downloadIcon {
-    margin-bottom: -.35rem;
-    margin-right: .3rem;
+    margin-bottom: -.37rem;
+    margin-right: .4rem;
+    margin-left: -.2rem;
 }
