--- a/frontend/src/components/Fields/input_field.module.css
+++ b/frontend/src/components/Fields/input_field.module.css
@@ -10,13 +10,14 @@
 .input {
 
   width: 100%;
+  height: 100%;
   padding: 0.75rem;
 
   font-size: 1rem;
   font-family: 'IBM Plex Mono';
   color: #eaeaea;
 
-  background-color: #2a2a2a;
+  background-color: #222222;
   border: transparent;
   border-bottom: .2em solid #3a3a3a;
   border-radius: .2rem;
@@ -28,7 +29,7 @@
   outline: none;
 
   border-color: #353be5;
-  background-color: #2a2a2a;
+  background-color: #202020;
   color: #ffffff;
 }
 
@@ -40,4 +41,8 @@
   color: #de3535;
   font-size: 0.875rem;
   margin-top: 0.25rem;
+}
+
+.textArea {
+  resize: none;
 }
