Functionnal register system, 404 page, splitted services into multiple files and various fixes

--- a/frontend/src/components/NavBar/navbar.module.css
+++ b/frontend/src/components/NavBar/navbar.module.css
@@ -39,6 +39,9 @@
 .leftItem:hover {
     background-color: #eaeaea10;
 }
+.leftItem:active {
+    background-color: #eaeaea20;
+}
 
 /* WIP */
 .rightItem {
