--- a/frontend/src/styles/settings.module.css
+++ b/frontend/src/styles/settings.module.css
@@ -1,3 +1,29 @@
+.logo {
+  position: absolute;
+  top: 1.6rem;
+  left: 2rem;
+  height: 6em;
+  
+  padding: 1.5em;
+  
+  user-select: none;
+}
+
+.logoTitle {
+  position: absolute;
+  left: 10rem;
+  top: 4rem;
+
+  margin: 0;
+
+  color: #eaeaea;
+  font-family: Inter;
+  font-weight: 600;
+  font-size: 2.5em;
+
+  user-select: none;
+}
+
 .tabsContainer {
     position: absolute;
     left: 4rem;
@@ -32,7 +58,11 @@
 }
 
 .tab:hover {
-    background-color: #3a3a3a;
+    background-color: #eaeaea20;
+}
+
+.tab:active {
+    background-color: #eaeaea30;
 }
 
 .logout {
