--- a/frontend/src/components/NavBar/navbar.module.css
+++ b/frontend/src/components/NavBar/navbar.module.css
@@ -18,7 +18,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 2em;
+    padding: 1.3em;
+    box-sizing: border-box;
 }
 
 .leftItem {
@@ -45,7 +46,7 @@
 
 /* WIP */
 .rightItem {
-    margin: 0 1em;
+    margin: 0 .5em;
 
     user-select: none;
 
@@ -54,28 +55,31 @@
 
 .rightItems {
     margin-left: auto;
-    margin-right: 1em;
-    margin-top: .3em;
+    height: 100%;
+    /* margin-right: 1em; */
+    /* margin-top: .3em; */
 
     display: flex;
 
 }
 
 .settings {
+    height: 100%;
     border-radius: 100rem;
     transition: 600ms;
 }
 
-.profile {
-    border-radius: 100rem;
+.dashboard {
+    height: 100%;
+    border-radius: .5rem;
     transition: 300ms;
 }
 
 .login {
+    height: 100%;
     border-radius: .5rem;
     transition: 600ms;
     margin-top: .06em;
-    height: 80%;
 }
 
 .login:hover {
@@ -87,6 +91,6 @@
     transform: rotate(180deg);
 }
 
-.profile:hover {
+.dashboard:hover {
     background-color: #eaeaea10;
 }
