--- a/frontend/src/styles/content_page.module.css
+++ b/frontend/src/styles/content_page.module.css
@@ -196,3 +196,23 @@
 .version:hover {
     background-color: #3a3a3a;
 }
+
+.panelActions {
+    position: absolute;
+    bottom: 0;
+
+    margin: 0 -2rem;
+    padding: 2rem;    
+
+    width: 100%;
+
+    box-sizing: border-box;
+}
+
+/*TODO handle versions overlapping*/
+.deleteButton {
+
+    width: 100%;
+    min-width: 5em;
+    font-size: 1.2rem;
+}
