Funcionnal custom checkboxes, fixed small card component and added the ability to launch both backend and frontend at once

--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -129,6 +129,12 @@ h1 {
   /* border: #3a3a3a solid; */
   border-width: .1em;
   border-radius: .5rem;
+
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+  
+  overflow: scroll;
 }
 
 .container {
