--- a/frontend/src/components/Cards/small_card.module.css
+++ b/frontend/src/components/Cards/small_card.module.css
@@ -1,6 +1,9 @@
 .emptyCard {
     height: 100%;
     width: 22em;
+    min-width: 22em;
+    min-height: 13rem;
+
     align-items: center;
     display: flex;
 
@@ -25,27 +28,66 @@
 }
 
 .Card {
-    height: 100%;
-    width: 22em;
-    align-items: center;
-    display: flex;
 
-    background-color: #141414;
+    position: relative;
+
+    height: 100%;
+    min-width: 22em;
+    min-height: 13rem;
+
+    background-color: #101010;
     border: #3a3a3a .1rem solid;
     border-radius: 1rem;
 
     box-sizing: border-box;
+
+    overflow: hidden;
 }
 
 .CardText {
 
-    padding: 1em;
-    width: 100%;
+    margin-left: 7rem;
+    margin-top: .2rem;
 
-    color: #9a9a9a;
-
-    text-align: center;
-    vertical-align: middle;
+    color: #eaeaea;
+    /* font-weight: 600; */
+    font-size: 1.3rem;
 
     user-select: none;
+
+}
+
+.banner {
+    width: 100%;
+    height: 40%;
+
+    border-radius: 1rem 1rem 0 0;
+
+    filter: brightness(50%);
+    object-fit: cover;
+}
+
+
+.thumbnail {
+    position: absolute;
+    left: 1rem;
+    top: 25%;
+
+    width: 5rem;
+    height: 5rem;
+
+    padding: .5rem;
+
+    background-color: #101010;
+    border: #3a3a3a .1rem solid;
+    border-radius: 1rem;
+
+    box-sizing: border-box;
+
+}
+
+.Card:hover {
+        filter: drop-shadow(#353be515 0 0 1em);
+        transform: scale(1.01);
+        border-color: #6b70f7;
 }
