--- a/frontend/src/styles/dashboard.module.css
+++ b/frontend/src/styles/dashboard.module.css
@@ -1,3 +1,24 @@
+.container {
+  position: absolute;
+  top: 11rem;
+  right: 4rem;
+  left: 22rem;
+  bottom: 4rem;
+
+  padding: 3rem;
+  padding-top: 2rem;
+
+  background-color: #1a1a1a;
+  color: #eaeaea;
+
+  border: #3a3a3a solid;
+  border-width: .1em;
+  border-radius: .5rem;
+
+  overflow: scroll;
+
+}
+
 .category {
     margin-top: 0;
 }
@@ -14,8 +35,10 @@
 
 .tiles {
 
-    height: 13rem;
-    margin-bottom: 3rem;
+    height: 14rem;
+    margin-bottom: 2rem;
+    padding: 1rem;
+    margin-right: -3rem;
 
     overflow-x: scroll;
     overflow-y: visible;
@@ -26,20 +49,29 @@
 
 .toolbar {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    right: 5rem;
+    left: 23rem;
+    bottom: 5rem;
 
-    height: 5rem;
-    padding: .5rem;
+    height: 3rem;
+    min-width: 30rem;
+    padding: 1rem;
 
-    /* background-color: #9a9a9a; */
+    background-color: #141414;
+    border: #3a3a3a .1rem solid;
+    border-radius: .5rem;
+
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+
 }
 
 .toolbarRightItems {
-    position: absolute;
-    right: 1rem;
-    bottom: 1rem;
+    /* position: absolute; */
+    /* right: 1rem; */
+    /* bottom: 1rem; */
+    margin-left: auto;
 
 }
 .createButton {
